--- a/ClientApp/src/components/index.css
+++ b/ClientApp/src/components/index.css
@@ -1,9 +1,5 @@
 :root {
   font: 16px / 1 sans-serif;
-  background-image: url("https://i.ytimg.com/vi/4l6J5jhRgos/maxresdefault.jpg");
-  background-size: cover;
-  /* overflow: hidden; */
-  text-shadow: whitesmoke 0 0 10px;
 }
 
 html {
@@ -11,6 +7,24 @@ html {
 }
 
 body {
+  /* background-image: url("https://i.ytimg.com/vi/4l6J5jhRgos/maxresdefault.jpg"); */
+  background-size: cover;
+  /* overflow: hidden;  */
+  /* text-shadow: whitesmoke 0 0 10px; */
   margin: 0;
   min-height: 100%;
+  /* font-size: 30em; */
 }
+
+/* .main-journal {
+  display: flex;
+  justify-content: center;
+  font-size: 30em; */
+/* align-content: center; */
+/* } */
+
+/* h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 4em;
+} */
